@@ -1,5 +1,8 @@
 2010-08-09 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/io-xml/naxml-reader.c (naxml_reader_read_start):
+	Attach the profile to the action before trying to read it.
+
 	* src/nact/nact-iexecution-tab.c (execution_mode_toggle):
 	Fix sensitivity of startup fields vs. execution mode.
 
